k8s/rancher-demo/kustomize/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rancher-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.juxtagene.com
    http:
      paths:
      - path: /
        backend:
          serviceName: rancher-demo
          servicePort: 80
  tls:
    - hosts:
      - www.juxtagene.com
      secretName: www-juxtagene-com-tls
